# Concryptor

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
src/: archive.rs  cli.rs  crypto.rs  engine.rs  header.rs  lib.rs  main.rs
tests/: integration.rs
