[package]
name = "concryptor"
version = "0.1.0"
edition = "2021"
description = "A multi-threaded AEAD encryption engine"
license = "AGPL-3.0-or-later"

[dependencies]
ring = "0.17"
io-uring = "0.7"
argon2 = "0.5"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rand = "0.8"
anyhow = "1"
rpassword = "7"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
sha2 = "0.10"

[[bench]]
name = "throughput"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
