[package]
name = "concryptor"
version = "1.0.2"
edition = "2021"
rust-version = "1.75"
description = "A multi-threaded AEAD encryption engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/FrogSnot/Concryptor"
homepage = "https://github.com/FrogSnot/Concryptor"
readme = "README.md"
authors = ["FrogSnot"]
keywords = ["encryption", "aead", "cli", "chacha20", "aes-gcm"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
ring = "0.17"
io-uring = "0.7"
libc = "0.2"
argon2 = "0.5"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
rand = "0.8"
anyhow = "1"
rpassword = "7"
zeroize = { version = "1", features = ["derive"] }
tar = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
sha2 = "0.10"

[[bench]]
name = "throughput"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
